--- a/Source/EMsoftWrapperLib/CMakeLists.txt
+++ b/Source/EMsoftWrapperLib/CMakeLists.txt
@@ -17,6 +17,7 @@ endforeach()
 set(EMsoftWrapperLib_SOURCES
   ${DictionaryIndexing_Wrapper_SRCS}
   ${OM_Wrapper_SRCS}
+  ${py_Wrapper_SRCS}
   ${SEM_Wrapper_SRCS}
   ${TEM_Wrapper_SRCS}
   ${QC_Wrapper_SRCS}
